<resources>
    <string name="app_name">ItalianCities</string>
    <string name="cities">Cities</string>
    <string name="maps">Maps</string>
    <string name="city">City:</string>
    <string name="province">Province:</string>
    <string name="cap">CAP:</string>
    <string name="cadastralCode">Cadastral Code:</string>
    <string name="prefix">Prefix:</string>
    <string name="contacts">Contacts:</string>
    <string name="location_disabled">Location service is not available, only the location of the city will be shown</string>
    <string name="apk_key" translatable="false">AIzaSyDIeTe0NtwXqnC0I3erC_PPUrvjM_7ugwA</string>
    <string name="action_search">Search</string>
    <string name="position">Me</string>

</resources>